--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇯🇵 日本-2.64MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇭🇰 香港-1.77MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
-  - {name: 🇫🇷 法国-1.32MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-10.48MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-15.28MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20724, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-13.70MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20725, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.52MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20723, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-7.99MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 未知国家-1.57MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 🇯🇵 日本-2.94MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
+  - {name: 未知国家-790.8KB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.04MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20724, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-15.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 未知国家-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
+      - 未知国家-790.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-15.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 未知国家-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
+      - 未知国家-790.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-15.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 未知国家-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
+      - 未知国家-790.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-15.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 未知国家-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
+      - 未知国家-790.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-15.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 未知国家-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
+      - 未知国家-790.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-15.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 未知国家-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
+      - 未知国家-790.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-15.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 未知国家-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-588.1KB/s(Youtube:不良林)
+      - 未知国家-790.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
